See how the model performs on the data, not optimal as it is only 60%

--- a/wine-backfill.ipynb
+++ b/wine-backfill.ipynb
@@ -579,31 +579,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "quality\n",
-       "6    2836\n",
-       "5    2138\n",
-       "7    1079\n",
-       "4     216\n",
-       "8     193\n",
-       "3      30\n",
-       "9       5\n",
-       "Name: count, dtype: int64"
+       "1177"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Look at the different counts of outcome variable\n",
-    "wine_df['quality'].value_counts()"
+    "wine_df['quality'].value_counts()\n",
+    "\n",
+    "# look at the amount of duplicates\n",
+    "wine_df.duplicated().sum()\n",
+    "\n",
+    "# Remove the duplicates\n",
+    "wine_df.drop_duplicates(inplace=True)"
    ]
   },
   {
